# eccmeteor

./: Configure.js  EccDocuments.doc  README.md  REAMME  ReportData.json  Svdb.js  api  cankao.js  meteor安装依赖顺序及方法.txt  node编译说明.txt  testSimple.js
android/ECCTest/: ECCTest.cpp  ECCTest.pro  mainwindow.cpp  svapi.ini
android/ccgnu2/: AndroidManifest.xml  commoncpp2.list
android/sv/: AndroidManifest.xml  README.md  helloSV.apk  svapi.ini
client/: index.html  monitor.js  system-info.html
client/helper_register/: monitorHelperRegister.js  publicHelperRegister.js
client/lib/: DataProcess.js  line.js
collectd/: MonitorChunkDataAnalyze.js  README.md  filter.js  master.js  server.js
collectd/alert/: AlertServer.js
collectd/connection/: Connection.js  Mongodb.js
collectd/data/: cpu  memory
ecc-alert-server/: .~lock.EccAlertServer.odg#  EmailClientConfigure.js  EmailContent.js  EmailSending.js  EmailServerConfigure.js  EmailTemplate.js  MonitorInformation.js  README.md  Timer.js  index.js
ecc-report-server/: README.md
ecc-window-runtime/: svapi.ini
eccmeteor/: .dbshell  .gitignore  README.INSTALL  README.linux  README.md  README.modules  README.orion  README.windows  model.js  packages.json  svapi.ini
gloox/: README.md  xmpp.sln
gloox/addon/: qsv.h  (+5 more)
lib/: utils.js
linux/: .gitignore  README.md
linux/snmp/: CMakeLists.txt  SnmpMonitor.cpp  SnmpMonitor.h  SnmpOperate.cpp  SnmpOperate.h  expression.cpp  expression.h  snmplib.cpp  snmplib.h
linux/snmp/libdes/examples/: speed
meteor/: modules.js
node_linux/: README.md  build.sh  build_db.sh
node_linux/addon/: CMakeLists.txt  Des.cpp  General.cpp  GroupAPI.cpp  MQapi.cpp  Makefile  MySocket.h  MyTCPStream.cpp  MyTCPStream.h  QueryData.cpp  QueryData.h  QueryProtocol.h  RcdStat.cpp  RecordType.h  SVSEAPI.cpp  ShareMemFile.cpp  ShareMemFile.h  TopologyChart.h  VirtualGroupAPI.cpp  addon.files  addonapi.cpp  cmake_install.cmake  complexFunc.cpp  otherfunc2.cpp  safedog.h  svdbapi.cpp  svdbapi.h  svdbtype.cpp  svdbtype.h  util.cpp
node_linux/addonsv/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.txt  V8MapInMap.h  addonsv.vcxproj  addonsv.vcxproj.filters  cmake_install.cmake
node_linux/sv_addon/: CMakeLists.txt  Makefile  ReadMe.txt  addonfunc.cpp  cmake_install.cmake  dllmain.cpp  stdafx.cpp  stdafx.h
node_module/: addon_test.cpp  readme.txt  sv_addon.sln
node_windows/: .gitignore  README.md  addon_test.vcxproj  addon_test.vcxproj.filters  node-v0.10.0.sln  node-v0.8.22.sln  sv_addon.sln
qt/: README.md  build.sh  svapi.sln  test.sln
qt/db/: CMakeLists.txt  EntityTempletPool.cpp  GeneralPool.h  Page.cpp  Queue.h  ResourcePool.cpp  SVSEPool.cpp  Services.cpp  ThreadEx.h  VirtualGroupPool.cpp  action.h  backuprecord.h  svdb.cpp
qt/schedule/: CMakeLists.txt  ConfigChangeThread.h  DispatchThread.cpp  GroupsItem.cpp  LoadConfig.cpp  MSGQueue.h  Makefile  Monitors.cpp  Monitors.h  Option.cpp  Option.h  QueueItem.h  QueuesManager.cpp  ReturnValue.h  SUtil.cpp  SUtil.h  SchMain.cpp  SchMain.h  Schedule.cpp  StateCondition.cpp  TString.cpp  TString.h  Task.h  WorkControl.cpp  WorkControl.h  WorkThread.cpp  WorkThread.h  appendmassrecord.h
router/: README.md
server/: methods.js  startup.js
xmpp/: README.md
(+1043 files in other folders)
