
PROJECT(addon)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

SET(LIBRARY_OUTPUT_PATH "../bin")
ADD_LIBRARY(addon ${DIR_SRCS})
#ADD_LIBRARY(addon SHARED ${DIR_SRCS})

ADD_DEFINITIONS( -D_USE_32BIT_TIME_T )
SET(CMAKE_BUILD_TYPE Release)

if(WIN32)
INCLUDE_DIRECTORIES("." "../ccgnu2/w32" "../ccgnu2/inc" "../ccgnu2/src")
else()
INCLUDE_DIRECTORIES("." "../ccgnu2/inc" "../ccgnu2/src")
endif()
